SERVER-58127 Fix benchRun() memory leak under an exception